Log GC pause